# ESGDocQuickNavigation

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
src/: chunker.py  pdf2vectordb.py
