[tool.poetry]
name = "esgdocquicknavigation"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pgvector = "^0.2.1"
sentence-transformers = "^2.2.2"
pypdf2 = "^3.0.1"
langchain = "^0.0.273"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
