[tool.poetry]
name = "esgdocquicknavigation"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
    { include = "src" },
]

[tool.poetry.dependencies]
python = "^3.10"
pgvector = "^0.2.1"
sentence-transformers = "^2.2.2"
sqlalchemy = "^2.0.20"
setuptools = "^68.1.2"
python-dotenv = "^1.0.0"
torch = "2.0.0"
psycopg = "^3.1.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
